--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,11 @@
         <item>T</item>
         <item>V</item>
     </string-array>
+    <string-array name="menu_array">
+        <item>Principal</item>
+        <item>Bluetooth</item>
+        <item>Aulas</item>
+    </string-array>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
 </resources>
